--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<img src="aarhus.jpg" alt="aarhus">
 	<img src="download.jpg" alt="aarhus">
 	<h2>Quartieri</h2>
-	<p>La città è suddivisa nei quartieri di:</p>
+	<p>La città è suddivisa nei seguenti quartieri:</p>
 	<ul>
 		<li>Brabrand</li>
 		<li>Egå</li>
