--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!doctype html>
-<html>
+<html lang="it">
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 	<title>Århus</title>
 	<style>@import url(style.css)</style>
-	<h1>Århus</h1>
+	<div class="jumbotron jumbotron-fluid">
+  	<div class="container">
+    <h1 class="display-4">Århus</h1>
+  	</div>
+	</div>
 </head>
 <body>
-	<table>
-		<tr>
-			<th>Stato</th>
-			<th>Regione</th>
-			<th>Abitanti</th>
-			<th>Densità</th>
-		</tr>
-		<tr>
-			<td>Danimarca</td>
-			<td>Jutland Centrale</td>
-			<td>273077</td>
-			<td>3000,85 ab/km^2</td>
-		</tr>
+	<table class="table table-striped table-dark">
+  	<thead>
+    <tr>
+      <th scope="col">Stato</th>
+      <th scope="col">Regione</th>
+      <th scope="col">Abitanti</th>
+      <th scope="col">Densità</th>
+    </tr>
+  	</thead>
+  	<tbody>
+    <tr>
+      <th scope="row">Danimarca</th>
+      <td>Jutland Centrale</td>
+      <td>273077</td>
+      <td>3000,85 ab/km^2</td>
+    </tr>
+	</tbody>
 	</table>
-	<p>Se vuoi visitare il sito del comune della città <a href="https://www.aarhus.dk/">clicca qui</a></p>
+	<p>Se vuoi visitare il sito del comune della città <button type="button" class="btn btn-dark"><a href="https://www.aarhus.dk/">clicca qui</a></button></p>
 	<h2>Storia</h2>
 	<p>Il <b>vescovado</b> di Århus risale almeno al 951, ma ritrovamenti archeologici recenti permettono di retrodatare il sito cittadino al VII secolo, all'inizio dell'<b>epoca vichinga</b>, facendo di Århus una delle più antiche città della <b> Scandinavia </b>. Tra il XIII e il XIV secolo l'insediamento originale subì un notevole sviluppo urbanistico trasformandosi in un'importante città commerciale. La sua posizione riparata sulla costa occidentale del <b>Kattegat </b> (il tratto di Mar Baltico compreso tra Svezia e Danimarca), la rendeva (e la rende ancora oggi), infatti, un punto nodale per gli scambi commerciali tra lo Jutland e le isole dell'arcipelago danese, e un importante scalo per le tratte tra la Germania, la Scandinavia e i Paesi Baltici. Dal punto di vista demografico, il suo sviluppo è stato molto più recente: la sua popolazione non superava quella di Randers fino alla fine del XIX secolo e fino agli anni venti del XX secolo, la città più grande della penisola rimaneva Aalborg. La relativamente rapida crescita demografica è stata il frutto delle dinamiche sociali innescate dalla rivoluzione industriale che comportarono un consistente flusso migratorio dalle aree rurali verso le nuove aree industriali urbane come Århus. Århus possiede, a detta di un giornale locale, la peggiore periferia del nord europa. Si possono notare alcuni palazzi popolari con il balcone senza base, senza un minimo di protezione.</p>
-	<img src="aarhus.jpg" alt="aarhus">
-	<img src="download.jpg" alt="aarhus">
+	<img src="aarhus.jpg" class="img-fluid" alt="aarhus">
+	<img src="download.jpg" class="img-fluid" alt="aarhus">
 	<h2>Quartieri</h2>
 	<p>La città è suddivisa nei seguenti quartieri:</p>
 	<ul>
@@ -59,6 +72,39 @@
 	<iframe src="https://youtube.com/embed/DoyuDHwGtRA"></iframe>
 	<h2>ARoS Århus Kunstmuseum</h2>
 	<p>ARoS Aarhus Kunstmuseum è il principale museo d'arte di Aarhus, Danimarca. Fu inaugurato nell'aprile 2004 e nel 2011 sulla copertura venne installata la passerella Your rainbow panorama, opera di Olafur Eliasson. Il museo è stato fondato nel 1859. L'8 aprile 2004 ARoS Aarhus Kunstmuseum ha aperto le sue mostre in un nuovissimo edificio moderno a 10 piani con una superficie totale di 20.700 m² e progettato dallo studio di architettura danese Schmidt Hammer Lassen. ARoS è uno dei più grandi musei d'arte del nord Europa con un totale di 816.468 visitatori nel 2015. Oltre alle grandi gallerie con mostre permanenti e temporanee l'edificio ARoS ospita un negozio di arte, una caffetteria e un ristorante. Il complesso architettonico del museo è stato completato nel 2011, con l'aggiunta dello skywalk circolare di Ólafur Elíasson, rendendolo il secondo museo più visitato in Danimarca dopo il Louisiana Museum.</p>
-	<img src="aros.jpg" alt="aros">
+	<img src="aros.jpg" class="img-fluid" alt="aros">
+
+	<h2>Altre attrazioni turistiche della città</h2>
+	<div class="card-group">
+  	<div class="card">
+    <img src="salling.jpg" class="card-img-top" alt="salling">
+    <div class="card-body">
+      <h5 class="card-title">Salling rooftop</h5>
+      <p class="card-text">Se, dopo lo shopping, vuoi bere un drink e mangiare qualcosa con una vista magnifica su Århus, Salling è quello che fa per te.</p>
+      <button type="button" class="btn btn-dark"><a href="https://salling.dk/madoplevelser/salling-rooftop-aarhus/">Visita il sito</a></button>
+    </div>
+  	</div>
+  	<div class="card">
+    <img src="tivoli.jpg" class="card-img-top" alt="tivoli">
+    <div class="card-body">
+      <h5 class="card-title">Tivoli Friheden</h5>
+      <p class="card-text">Un parco divertimenti a pochi chilometri dal centro città</p>
+      <button type="button" class="btn btn-dark"><a href="https://friheden.dk/">Visita il sito</a></button>
+    </div>
+  	</div>
+  	<div class="card">
+    <img src="botanisk.jpg" class="card-img-top" alt="botanisk">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Infine, un meraviglioso giardino botanico vicino a Den Gamble By, simbolo della città</p>
+      <button type="button" class="btn btn-dark"><a href="https://sciencemuseerne.dk/botanisk-have/">Visita il sito</a></button>
+    </div>
+  	</div>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 </html>
